--- a/src/components/help/help.scss
+++ b/src/components/help/help.scss
@@ -6,6 +6,8 @@
     width: 70ch;
     max-width: 50vw;
     min-width: 30ch;
+
+    .emulator > & { flex-shrink: 1; }
 }
 .help {
     width: 100%;
@@ -57,6 +59,11 @@
         vertical-align: middle;
         margin: 0 4px;
     }
+}
+
+@media (max-width: 912px) {
+    .help-container,
+    .toolbar .btn-help { display: none; }
 }
 
 @keyframes slide-in {
